--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
+ <!-- My external js files -->
+    <script src="js/riffwave.js"></script>
+    <script src="js/engine.js"></script>
+
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
